# crum

./: Cargo.toml  README.md
src/: cmatrix.rs  complex.rs  lib.rs  main.rs  matrix.rs  tensor.rs
tensor_macro/: Cargo.toml
tensor_macro/src/: lib.rs  main.rs
verify/: tensor.ipynb
