[package]
name = "crum"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Complex numbers and matrices for numerical analysis."
repository = "https://github.com/fransslabber/crum"
readme = "README.md"
keywords = ["complexnumbers", "complexmatrix","numericalanalysis","mathematics"]
categories = ["mathematics", "science"]
documentation = "http://www.gaiamathematica.net/crum"
homepage = "http://www.gaiamathematica.net"

[dependencies]
num-traits = "0.2.19"
rand = "0.8"
